<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="com.compiler.tourpanse.RegistrationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorRed"
            android:text="@string/full_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/fullNameEt"
            android:hint="@string/full_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorRed"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="phone"
            android:id="@+id/phoneNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:hint="@string/phone_number_hint"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorRed"
            android:text="Emergency Contact Number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="phone"
            android:id="@+id/emergencyContactNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:hint="@string/phone_number_hint"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorRed"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:hint="@string/email_hint"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorRed"
            android:text="Username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:hint="jhoncena"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorRed"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:hint="@string/password_hint"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorRed"
            android:text="@string/confirm_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_red"
            android:gravity="left"
            android:hint="@string/password_hint"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />



        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="clear"
                android:id="@+id/clearBtn"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAllCaps="false"
                android:background="@drawable/black_border_red"
                android:text="@string/clear"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:onClick="save"
                android:id="@+id/saveBtn"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAllCaps="false"
                android:background="@drawable/red_border_black"
                android:text="@string/save"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

</ScrollView>